# PETS

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BOTS_REAL_NAMES.md  GROUND_TRUTH_REPORT.md  LICENSE  Makefile  PRODUCTION_DEPLOY.md  PROJECT_STRUCTURE.txt  README.md  SECURITY_CHECKLIST.md  alembic.ini  contexto_proyecto.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  gitignore  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: strategy_proposal.md
.github/workflows/: cd.yml  ci.yml  docker-publish.yml  security-scan.yml  test.yml
config/: __init__.py  api_endpoints.yaml  bot_8_config.yaml  capital_allocation.yaml  risk_management.yaml  zone_framework.yaml
config/bots/: bot_03_copy_trading.yaml  bot_05_market_making.yaml
config/prometheus/: prometheus.yml
configs/: README.md  bot_01_rebalancer.yaml  bot_02_esports.yaml  bot_03_copy_trading.yaml  bot_04_news_driven.yaml  bot_05_market_making.yaml  bot_06_multi_outcome.yaml  bot_07_contrarian.yaml  bot_08_tail_risk.yaml  bot_09_advanced_kelly.yaml  bot_10_longterm.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BOT8_PAPER_TRADING.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  MIGRATION_SPRINT2_CLEAN_ARCHITECTURE.md  MONITORING.md  README.md  RISK_MANAGEMENT.md  SECURITY.md  SETUP_INSTRUCTIONS.md  STRATEGY_GUIDE.md  TROUBLESHOOTING.md  WINDOWS_SETUP_GUIDE.md  polymarket_10_estrategias_AUDITADAS_FINAL.csv  polymarket_implementation_roadmap.csv  polymarket_infrastructure_requirements.csv  polymarket_risk_management_framework.csv
infra/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.bots  Dockerfile.core  Dockerfile.dashboard
infra/kubernetes/: README.md  ingress.yaml  namespace.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
infra/timescale/: init.sql
notebooks/: README.md
scripts/: backtest.py  backup_db.sh  clean_logs.sh  deploy_vps.sh  health_check.py  migrate_data.py  paper_trade.py  restore_db.sh  run_backtest.py  run_bot8_paper_trading.py  run_paper_trading.py  seed_db.py  setup_db.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/middleware/: auth.py  (+4 more)
src/bots/: __init__.py  base_bot.py  bot_01_market_rebalancing.py  bot_01_rebalancer.py  bot_02_esports.py  bot_02_esports_parsing.py  bot_03_copy_trading.py  bot_04_news_driven.py  bot_04_news_scalping.py  bot_05_market_making.py  bot_06_multi_outcome.py  bot_06_multi_outcome_arb.py  bot_07_contrarian.py  bot_07_contrarian_attention.py  bot_08_tail_risk_combo.py  bot_09_advanced_kelly.py  bot_09_kelly_value.py  bot_10_longterm.py  bot_10_longterm_value.py  bot_manager.py
src/core/: __init__.py  event_bus.py  health_checker.py  market_data_processor.py  order_execution_engine.py  position_tracker.py  risk_manager.py  websocket_gateway.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  external_apis.py  models.py  polygon_rpc.py  polymarket_api.py  redis_client.py  timescaledb.py
src/domain/: __init__.py  exceptions.py
src/infrastructure/: __init__.py
src/monitoring/: __init__.py  alerts.py  logger.py  metrics_collector.py  profiler.py  prometheus_exporter.py
src/presentation/: __init__.py
src/strategies/: __init__.py
src/utils/: __init__.py  config_loader.py  constants.py  crypto.py  datetime_utils.py  exceptions.py  retry.py  validators.py
tests/: __init__.py  conftest.py  test_paper_trading.py
tests/e2e/: test_bot_08_full_flow.py  test_bot_lifecycle.py  test_emergency_halt.py  test_paper_trading.py
(+269 files in other folders)
